@@ -1,11 +1,3 @@
 (% main.rli generated by rlc1 %)
 
-type test: int;
-
-type hoge
-    : A ()
-    | B (int)
-    | C (int,int)
-    ;
-
 external main! () -> ();
