@@ -1,0 +1,4 @@
+export
+exit: (status! int) {
+    syscall(1, status);
+};
