@@ -1,7 +1,9 @@
 2010-04-07  nineties <nineties48@gmail.com>
 
 	* rlc1: replaced 'void' to '()' (unit)
-	* rlc1: implemented automatic header generation
+	* rlc1: implemented
+	    automatic header generation
+	    export/import/external directives
 
 2010-04-06  nineties <nineties48@gmail.com>
 
